# point-cloud-retrieval-from-image

./: .gitignore  .gitmodules  README.md  generate_pcl_submaps.ipynb  img_preprocessing.ipynb  install_dependencies.sh  main.ipynb  main.py  main_crash.ipynb  main_new_negative_mining.ipynb  pcl_preprocessing.ipynb  point_net.py  test_netvlad.py
data/: OxfordRobotcarDataset.py
data/oxford/: CMakeLists.txt  image_preprocessing.py  ned_pcl_to_file.py  pcl_preprocessing.cpp  pcl_trafo.py  plot_route.py  plot_train_test_split.py  project_submap_to_img.py  test_preprocessing_params.py  testmap.raw  unpack_data.py  visualize_submap.py
data/oxford/data_sample/: lms_front.timestamps  lms_rear.timestamps  mono_left.timestamps  mono_rear.timestamps  mono_right.timestamps  unzip_oxford_data_here.txt
data/oxford/robotcar-dataset-sdk/python/: build_pointcloud.py
models/: unzip_netvlad_checkpoint_here.txt
models/our_checkpoints/: info.txt
